# UGR

./: .gitignore  .~lock.Autoevaluacion.docx#  .~lock.PDORESUMENFINAL.odt#  AA-PREGUNTAS.html  Autoevaluacion.docx  PDORESUMENFINAL.odt  Untitled-1.sql  cassandraprueba.sql  erasmus.md  facfunctions.py  facturas.py  hola.txt  ic.json  long_trainiing.cpp  main.typ  preguntas.html  prueba.py  pruebaalg.cpp  testabc.cc  todo.md
1/FBD/: practicas.sql
1/MC/: html_to_md.l
2/ISE/: ej1.yaml  ej2.yaml  inventario.yml  inventory.ini  notes2.md  notes3.md
2/MN/: P1_Resol_ecuaciones_no_lineales.ipynb  P1_solucion.ipynb  precision_tolerancia.ipynb  (+1 more)
ALG/: mimain.aux  mimain.fdb_latexmk  mimain.fls  mimain.tex
CV/: CvEs.typ  cvEN.typ  cvES.typ
EC/: hola  prueba  prueba.s  size
ED/copia/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  contraste  negativo  subimagen  va.pgm
ED/copia/estudiante/src/: contraste.cpp  image.cpp  imageop.cpp  subimagen.cpp
ED/copia/img/: va.pgm
ED/copia/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ED/copia/nbproject/private/: private.xml
FBD/: practicas.sql
MC/: htmltomd  htmltomd.l  index.html  lex.yy.cc  prog  programa1.l  prueba.html  salida.txt  to.md
SCD/: archivo.html  archivo.md
cuarto/: curva_desde_curvatura_torsion.py
erasmus/: .~lock.PlantillaLinariPerezPablo-Linkoping.odt#  PlantillaLinariPerezPablo-Linkoping.odt
kitty/: kitty.conf
tercero/: Autoevaluacion.docx  seminario.md
(+366 files in other folders)
